@@ -27,18 +27,18 @@ rbart_vi(
 
 \S3method{plot}{rbart}(x, plquants = c(0.05, 0.95), cols = c('blue', 'black'), \dots)
 \S3method{fitted}{rbart}(object,
-                         value = c("post-mean", "ppd", "bart", "ranef"),
+                         value = c("ev", "ppd", "bart", "ranef"),
                          sample = c("train", "test"),
                          combineChains = TRUE,
                          \dots)
 extract(object, \dots)
 \S3method{extract}{rbart}(object,
-                          value = c("post-mean", "ppd", "bart", "ranef"),
+                          value = c("ev", "ppd", "bart", "ranef"),
                           sample = c("train", "test"),
                           combineChains = TRUE,
                           \dots)
 \S3method{predict}{rbart}(object, newdata, group.by, offset,
-                          value = c("post-mean", "ppd", "bart", "ranef"),
+                          value = c("ev", "ppd", "bart", "ranef"),
                           combineChains = TRUE,
                           \dots)
 }
@@ -67,9 +67,9 @@ extract(object, \dots)
     Same as in \code{\link{bart2}}.}
   \item{object}{A fitted \code{rbart} model.}
   \item{newdata}{Same as \code{test}, but named to match \code{\link{predict}} generic.}
-  \item{value}{One of \code{"post-mean"}, \code{"ppd"}, \code{"bart"}, \code{"ranef"} for
-        the posterior mean, posterior predictive distribution, non-parametric/BART component,
-        or random effect respectively. The posterior mean is sum of the BART component and the
+  \item{value}{One of \code{"ev"}, \code{"ppd"}, \code{"bart"}, \code{"ranef"} for
+        the posterior of the expected value, posterior predictive distribution, non-parametric/BART component,
+        or random effect respectively. The expected value is the sum of the BART component and the
         random effects, while the posterior predictive distribution is a response sampled
         with that mean.}
   \item{sample}{One of \code{"train"} or \code{"test"}, referring to the training or tests samples
